<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.appmerise.appmeriseinc.PrivacyPolicy">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarSize="3.2dip"
        android:scrollbarThumbVertical="@drawable/scrollbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
<!-- privacy policy -->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="08dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:padding="5dp"
                            android:text="Privacy Policy"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"

                            android:layout_height="match_parent"
                            android:lineSpacingMultiplier="1.2"
                            android:padding="10dp"
                            android:text="@string/pp1"
                            android:textSize="18sp" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


        <!--    Information Collection and Use-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="08dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:padding="5dp"
                            android:text="Information Collection and Use"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"

                            android:layout_height="match_parent"
                            android:lineSpacingMultiplier="1.2"
                            android:padding="10dp"
                            android:text="@string/pp2"
                            android:textSize="18sp" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <!--   Log Data-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="08dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:padding="5dp"
                            android:text="Log Data"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"

                            android:layout_height="match_parent"
                            android:lineSpacingMultiplier="1.2"
                            android:padding="10dp"
                            android:text="@string/pp3"
                            android:textSize="18sp" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>



            <!--  Cookies-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="08dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:padding="5dp"
                            android:text="Cookies"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"

                            android:layout_height="match_parent"
                            android:lineSpacingMultiplier="1.2"
                            android:padding="10dp"
                            android:text="@string/pp4"
                            android:textSize="18sp" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <!--  Service Providers-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="08dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:padding="5dp"
                            android:text="Service Providers"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"

                            android:layout_height="match_parent"
                            android:lineSpacingMultiplier="1.2"
                            android:padding="10dp"
                            android:text="@string/pp5"
                            android:textSize="18sp" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <!--  Security-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="08dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:padding="5dp"
                            android:text="Security"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"

                            android:layout_height="match_parent"
                            android:lineSpacingMultiplier="1.2"
                            android:padding="10dp"
                            android:text="@string/pp6"
                            android:textSize="18sp" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>


            <!-- Children’s Privacy-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="08dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:padding="5dp"
                            android:text="Children’s Privacy"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"

                            android:layout_height="match_parent"
                            android:lineSpacingMultiplier="1.2"
                            android:padding="10dp"
                            android:text="@string/pp8"
                            android:textSize="18sp" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>

            <!-- Changes to This Privacy Policy-->
            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="08dp"
                card_view:cardCornerRadius="2dp"
                card_view:contentPadding="10dp">


                <RelativeLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">


                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:padding="5dp"
                            android:text="Changes to This Privacy Policy"
                            android:textAppearance="?android:textAppearanceMedium"
                            android:textColor="@color/colorPrimaryDark"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"

                            android:layout_height="match_parent"
                            android:lineSpacingMultiplier="1.2"
                            android:padding="10dp"
                            android:text="@string/pp9"
                            android:textSize="18sp" />

                    </LinearLayout>
                </RelativeLayout>
            </android.support.v7.widget.CardView>




        </LinearLayout>
    </ScrollView>
</RelativeLayout>
