<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    tools:context="com.appmerise.appmeriseinc.IntroMainFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbarSize="3.2dip"
        android:scrollbarThumbVertical="@drawable/scrollbar">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <!--Welcome speech -->
    <android.support.v7.widget.CardView

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="08dp"
        android:visibility="visible"
        card_view:cardCornerRadius="2dp"
        card_view:contentPadding="10dp">


        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"

                    android:text="Welcome to Appmerise"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/appmerisedialog"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="#454545"
                    android:textStyle="bold" />



            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>


        <!--What makes us special -->

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="08dp"
            android:visibility="visible"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"

                        android:text="What makes us special"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/appmerisedialogwhatsmakesusspecial"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#454545"
                        android:textStyle="bold" />



                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

        <!--Request a quote-->

        <android.support.v7.widget.CardView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="08dp"
            android:visibility="visible"
            card_view:cardCornerRadius="2dp"
            card_view:contentPadding="10dp">


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="Request a Quote"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:text="@string/appmerisedialogrequestaquote"
                        android:textAppearance="?android:textAppearanceMedium"
                        android:textColor="#454545"
                        android:textStyle="bold" />



                </LinearLayout>
            </RelativeLayout>
        </android.support.v7.widget.CardView>

    </LinearLayout>

    </ScrollView>


</FrameLayout>
